# rust-mkdir

./: .gitignore  Cargo.toml  README.md
src/: change_permissions.rs  create_dir.rs  main.rs
