[package]
name = "rust-mkdir"
version = "0.1.0"
authors = ["n1c00o <nicolaspaul45400@gmail.com>"]
edition = "2018"
documentation = "https://github.com/n1c00o/rust-mkdir"
readme = "README.md"
homepage = "https://github.com/n1c00o/rust-mkdir"
repository = "https://github.com/n1c00o/rust-mkdir"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
